IJPL-238 remove the unnecessary usage of commons-lang library (part 5 - introduce commons-text)
GitOrigin-RevId: cd43b822494cea06bfd4eba2af1f70869b954024